fixed font size and alignment on rtl languages for translations and foot note

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -176,8 +176,10 @@ li em{
 
 .text-translation{
   .urdu, .punjabi, .persian {
-   float: right;
+    float: right;
     line-height: 1.7;
+    clear: both;
+    width: 100%;
   }
 }
 .persian{
